manifests/istio/virtualservices/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - grafanat.seokmin.com
  gateways:
    - test-gateway
  http:
    # 1. HTTP 요청은 HTTPS로 리다이렉트
    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 308

    # 2. HTTPS 요청은 실제 Grafana 서비스로 포워딩
    - match:
        - port: 443
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 3000
