manifests/istio/virtualservices/prometheus-virtualservice.yaml
# manifests/istio/virtualservices/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
    - prometheust.seokmin.com
  gateways:
    - test-gateway
  http:
    # 1. HTTP → HTTPS 리다이렉트
    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 308
#      route:
#        - destination:
#            host: prometheus-prometheus.monitoring.svc.cluster.local
#            port:
#              number: 9090
#


    # 2. HTTPS 요청 처리
    - match:
        - port: 443
      route:
        - destination:
            host: prometheus-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
