manifests/istio/virtualservices/test-hybrid-virtualservice.yaml
# manifests/istio/virtualservices/test-hybrid-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-frontend-vs
  namespace: test
spec:
  hosts:
    - test.seokmin.com
  gateways:
    - test-gateway   # 너가 이미 쓰고 있는 gateway
  http:
    - match:
        - port: 80
      redirect:
        scheme: https
        redirectCode: 308
    - route:
        - destination:
            host: test-hybrid-front.test.svc.cluster.local
            port:
              number: 80
